# aizo-sorting

./: .gitignore  README.md
data/: test1.txt  test2.txt
src/: CMakeLists.txt  main.cpp
src/algorithms/: heap_sort.cpp  heap_sort.h  insertion_sort.cpp  insertion_sort.h  quick_sort.cpp  quick_sort.h  shell_sort.cpp  shell_sort.h
src/core/: CMakeLists.txt  app.cpp  app.h  menu.cpp  menu.h  test.cpp  test.h
src/menu/: app.cpp  app.h  demo_menu.cpp  demo_menu.h  menu.cpp  menu.h  test.cpp  test.h  test_loop.cpp  test_loop.h
src/utils/: array.cpp  array.h  others.cpp  others.h
